{
  "version": 4,
  "terraform_version": "0.12.25",
  "serial": 438,
  "lineage": "d7dbb198-794c-ef56-32ea-9b0ebcb6e372",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-01dc9f826cc0b18b1",
            "public_dns": "ec2-54-70-20-28.us-west-2.compute.amazonaws.com",
            "public_ip": "54.70.20.28",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dontstarvetogether_ubuntu",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06ffade19910cbfc0",
            "arn": "arn:aws:ec2:us-west-2:123871167802:instance/i-01cd6612d0c844d81",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01cd6612d0c844d81",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "GamingServerKeyPair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a9730588fa93dedd",
            "private_dns": "ip-10-0-1-130.us-west-2.compute.internal",
            "private_ip": "10.0.1.130",
            "public_dns": "ec2-18-237-75-177.us-west-2.compute.amazonaws.com",
            "public_ip": "18.237.75.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06210591406f3538b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05afec546f5ac44aa",
            "tags": {
              "Name": "dontstarvetogetherubuntu-instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0103930833d51ee40"
            ]
          },
          "dependencies": [
            "aws_key_pair.GamingServerKeyPair",
            "aws_security_group.allow-ssh",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0bd8118d11d774025",
            "owner_id": "123871167802",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01dc9f826cc0b18b1",
            "id": "nat-0616ce6ae1525d2bf",
            "network_interface_id": "eni-06825edd1cffb2392",
            "private_ip": "10.0.1.16",
            "public_ip": "54.70.20.28",
            "subnet_id": "subnet-05afec546f5ac44aa"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-091139e3bce5deaa3",
            "owner_id": "123871167802",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-0616ce6ae1525d2bf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0c98799ecd7e91503",
            "owner_id": "123871167802",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bd8118d11d774025",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0744d4b51eb8d0bfd",
            "route_table_id": "rtb-091139e3bce5deaa3",
            "subnet_id": "subnet-0d6938c2c59c0b76b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-1",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07d71ccdab1cf3cc7",
            "route_table_id": "rtb-091139e3bce5deaa3",
            "subnet_id": "subnet-008be7b2f87126873"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-2",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e09070b4d46e8345",
            "route_table_id": "rtb-091139e3bce5deaa3",
            "subnet_id": "subnet-0d376c4ed753b581b"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main-gw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.main-private",
            "aws_subnet.main-private-3",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc9673f0da75191",
            "route_table_id": "rtb-0c98799ecd7e91503",
            "subnet_id": "subnet-05afec546f5ac44aa"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0575d389d6b4e4bb4",
            "route_table_id": "rtb-0c98799ecd7e91503",
            "subnet_id": "subnet-050165c852ea145e4"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-3-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4fd91d2c875fcfa",
            "route_table_id": "rtb-0c98799ecd7e91503",
            "subnet_id": "subnet-079985e2d336b1351"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-3",
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:security-group/sg-0103930833d51ee40",
            "description": "This security group allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0103930833d51ee40",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "allow-ssh",
            "name_prefix": null,
            "owner_id": "123871167802",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0d6938c2c59c0b76b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0d6938c2c59c0b76b",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-008be7b2f87126873",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-008be7b2f87126873",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-2"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-0d376c4ed753b581b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0d376c4ed753b581b",
            "map_public_ip_on_launch": false,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-private-3"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-05afec546f5ac44aa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-05afec546f5ac44aa",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-050165c852ea145e4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-050165c852ea145e4",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:subnet/subnet-079985e2d336b1351",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-079985e2d336b1351",
            "map_public_ip_on_launch": true,
            "owner_id": "123871167802",
            "tags": {
              "Name": "main-public-3"
            },
            "vpc_id": "vpc-08d6606dca44baaba"
          },
          "dependencies": [
            "aws_vpc.GamingServerVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "GamingServerVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:123871167802:vpc/vpc-08d6606dca44baaba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea104f631139497a",
            "default_route_table_id": "rtb-05951ab63523d6ae7",
            "default_security_group_id": "sg-0149cbb66db4d37a8",
            "dhcp_options_id": "dopt-70442608",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08d6606dca44baaba",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05951ab63523d6ae7",
            "owner_id": "123871167802",
            "tags": {
              "Name": "GamingServerVPC"
            }
          }
        }
      ]
    }
  ]
}